[tool.poetry]
name = "loxone"
version = "1.0.0"
description = "extract statistics from Loxone Miniserver"
authors = ["Alexander Dreweke <thrawn@shadowhunt.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
argparse = "^1.4.0"
psycopg = "^3.1.1"
python = "^3.9"
tzlocal = "^5.0.0"
pyftpdlib = "^2.0.0"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
pycryptodome = "^3.16.0"
websockets = "^15.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.2.0"
pyupgrade = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
